# NAI

./: .gitignore  Cargo.toml  README.md
config/: categorize-LLM.json  chat-LLM.json  resume-LLM.json
config/wiki/: wiki-best.json  wiki-resume.json  wiki-search.json  wiki.json
doc/: workflow.md
src/: app.rs  lib.rs  main.rs  ui.rs
src/app/: init.rs  llm.rs  mod.rs  modules.rs
src/app/modules/: chat.rs  resume.rs  wikipedia.rs
src/helper/: init.rs
src/ui/: init.rs  inputfield.rs  mod.rs
