[package]
name = "nai"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
color-eyre = "0.6.3"
percent-encoding = "2.3.1"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
select = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
uuid = { version = "1.15.1", features = ["v4"] } 
